<resources>
    <string name="app_name">Rentl.</string>
    <string name="register_button">Don\'t have an account? <b>Register Here</b></string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="welcome_on_board">WELCOME ON BOARD</string>
    <string name="view_text1">Flexible Timing</string>
    <string name="view_text3">Accessibility</string>
    <string name="view_text5">Budget Friendly</string>
    <string name="view_text2">Don’t know when you are going to get time off for that
long awaited drive? No Worries!  Book your favourite car anytime of the day or night!</string>
    <string name="view_text4">We won’t make you get out of your area. Our cars will be highly accessible and will be delivered to you
if not near.</string>
    <string name="view_text6">We care about you. Hence, we won’t make your wallet bite you when you see our prices.</string>
    <string name="example">Example screen</string>
    <string name="basic_details">Basic Details</string>
    <string name="first_name">First Name <font color="#FFCF3F3F">*</font></string>
    <string name="last_name">Last Name <font color="#FFCF3F3F">*</font></string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="driving">Driving Licence</string>
    <string name="aadhar_card_no">XXXX/XXXX/XXXX</string>
    <string name="dl_no">AA–00-0000-0000000</string>
    <string name="upload_selfie_with_card">Upload Selfie with Card</string>
    <string name="declaration2">Subscribe to the email updates.</string>
    <string name="otp_head">Enter OTP to verify</string>
    <string name="a_6_digit_code_has_been_sent_to_your_mobile_via_sms_on">A 6 Digit code has been sent to your mobile via SMS on</string>
    <string name="didn_t_received_the_otp">Didn\'t received OTP?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_button">Continue</string>
    <string name="resend">Resend in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_line">Rent your favourite car at a reasonable price</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="compulsory">*</string>
    <string name="or">OR</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_91">+91</string>
    <string name="choose_your_type">Choose your type</string>
    <string name="give_your_keys">Give your Keys</string>
    <string name="rent_your_car_to_make_some_extra_income">Rent your car to make some extra income</string>
    <string name="get_keys">Get keys</string>
    <string name="rent_the_car_and_have_the_time_of_your_life">Rent the car and have the time of your life.</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="declarartion1"><![CDATA[I have read and agree to the terms & conditions]]></string>
    <string name="thank_you_for_choosing_rentl">Thank you for choosing Rentl</string>
    <string name="thankyou_subheading">Your application is under review. \nWe will get back to you in 30 minutes.</string>
    <string name="discover">Discover</string>
    <string name="acc_verified">Account Verified!</string>
    <string name="submit_application">Submit Application</string>
    <string name="cars_available_for_hourly_daily_weekly_or_monthly_basis">Cars available for hourly, daily, weekly or monthly basis.</string>
    <string name="rent_your_ride">Rent your Ride</string>
    <string name="make_your_car_available_for_people_to_rent_and_earn">Make your car available for people to rent and earn.</string>
    <string name="list_your_ride">List your Ride</string>
    <string name="manufacturer">Manufacturer <font color="#FFCF3F3F">*</font></string>
    <string name="year">Year <font color="#FFCF3F3F">*</font></string>
    <string name="model">Model <font color="#FFCF3F3F">*</font></string>
    <string name="chassis_number">Chassis Number <font color="#FFCF3F3F">*</font></string>
    <string name="kms_driven">KMs Driven <font color="#FFCF3F3F">*</font></string>
    <string name="enter_your_car_details_for_us_to_have_a_quick_review_which_will_enable_us_to_give_you_an_estimate">Enter your car details for us to have a quick review which will enable us to give you an estimate.</string>
    <string name="car_details">Car Details</string>
    <string name="free_home_delivery_for_a_booking_of_more_than_6_hours">Free home delivery for a booking of more than 6 hours *</string>
    <string name="terms_and_conditions_apply">Terms and Conditions Apply <font color="#FFCF3F3F">*</font></string>
    <string name="get_20_off_on_your_next_trip_after_a_successful_referral">Get 20% off on your next trip after a successful referral *</string>
    <string name="upload_rear">Upload Rear <font color="#FFCF3F3F">*</font></string>
    <string name="upload_a_selfie_with_your_card">Upload a selfie with your card <font color="#FFCF3F3F">*</font></string>
    <string name="upload_front">Upload Front <font color="#FFCF3F3F">*</font></string>
    <string name="driver_s_side">Driver\'s Side <font color="#FFCF3F3F">*</font></string>
    <string name="passenger_s_side">Passenger\'s Side <font color="#FFCF3F3F">*</font></string>
    <string name="front">Front <font color="#FFCF3F3F">*</font></string>
    <string name="rear">Rear <font color="#FFCF3F3F">*</font></string>
    <string name="spare_wheel">Spare Wheel</string>
    <string name="extra_parts">Extra Parts</string>
    <string name="registration_certificate">Registration Certificate <font color="#FFCF3F3F">*</font></string>
    <string name="pollution_certificate">Pollution Certificate <font color="#FFCF3F3F">*</font></string>
    <string name="insurance_document">Insurance Document <font color="#FFCF3F3F">*</font></string>
</resources>