<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/dotted_texture"
            android:layout_marginTop="120dp"
            />

        <ImageView
            android:id="@+id/slider_pic"
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/clock"
            android:layout_marginTop="145dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/slider_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_text1"
            android:textColor="#E3BFFA"
            android:textSize="28sp"
            android:textAlignment="center"
            android:fontFamily="@font/muli_extrabold"
            android:layout_below="@id/slider_pic"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/slider_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_text2"
            android:textAlignment="center"
            android:textColor="#E3BFFA"
            android:textSize="12sp"
            android:fontFamily="@font/muli_extrabold"
            android:layout_below="@id/slider_text1"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="50dp"/>

</RelativeLayout>