<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dotted_bg"
    tools:context=".AccountVerified">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_illustration_connected"
        android:layout_below="@id/appName"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="25dp"
        android:fontFamily="@font/inder"
        android:text="@string/acc_verified"
        android:textAlignment="center"
        android:textColor="#EADBFA"
        android:textSize="36sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_purple"
        android:fontFamily="@font/muli_semibold"
        android:paddingHorizontal="100dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/btn_txt"
        android:textSize="18sp" />

</RelativeLayout>