<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choice_bg"
    android:orientation="vertical"
    tools:context=".ListCar4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/car_details"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/inder"
        android:text="Upload your car photos for us to assess your car condition."
        android:textColor="@color/white"
        android:textSize="11sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/transparent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_dotted_rect"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="50dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_upload"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spare_wheel"
                android:textSize="12sp"
                android:textColor="#E5BCF3"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        app:cardBackgroundColor="@color/transparent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_dotted_rect"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="50dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_upload"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_parts"
                android:textSize="12sp"
                android:textColor="#E5BCF3"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_purple"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffC57ECB"
        android:textSize="20sp" />





</LinearLayout>